# Volutils

./: README.md
createRGBA/: CMakeLists.txt
createRGBA/src/: main.cpp  occlusionspectrum.cpp  occlusionspectrum.h
